--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script src="pong.js"></script>
     <script src="Paddle.js"></script>
+    <script src="Ball.js"></script>
 </body>
 </html>
