--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong ML</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box; /* Ensures padding and border are included in element's total width and height */
+        }
+
+        body {
+            overflow: hidden; /* Prevents scrollbars from appearing */
+        }
+    </style>
 </head>
 <body>
-    <h1>Pong ML</h1>
-    
+    <!-- Include your scripts here -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script src="pong.js"></script>
     <script src="Paddle.js"></script>
     <script src="Ball.js"></script>
+    <script src="Player.js"></script>
+    <script src="HandDetection.js"></script>
 </body>
 </html>
