add a stateMachine class

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
             box-sizing: border-box; /* Ensures padding and border are included in element's total width and height */
         }
 
-        body {
+        html, body {
             overflow: hidden; /* Prevents scrollbars from appearing */
+            background: black;
         }
     </style>
 </head>
@@ -23,7 +24,7 @@
     <script src="pong.js"></script>
     <script src="Paddle.js"></script>
     <script src="Ball.js"></script>
-    <script src="Player.js"></script>
     <script src="HandDetection.js"></script>
+    <script src="StateMachine.js"></script>
 </body>
 </html>
