--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,11 @@
         html, body {
             overflow: hidden; /* Prevents scrollbars from appearing */
             background: black;
+        }
+        canvas{
+            display:block;
+            z-index: 10;
+            visibility: visible;
         }
     </style>
 </head>
